# engineering-knowledge-rag-langchain

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/ci_vectorstore/: index.faiss  index.pkl
data/catalog/: docs_registry.json
data/curated_qa/: qa_ci_v1.jsonl  qa_dev_v1.jsonl  qa_dev_v2.jsonl  qa_mini_v0.jsonl  qa_mini_v1.jsonl
docs/: ambiguity_policy.md
reports/: eval_ci_v1.jsonl  eval_ci_v1.summary.txt  eval_dev_v1.jsonl  eval_dev_v1.summary.txt  eval_dev_v2.jsonl  eval_dev_v2.summary.txt  eval_mini_v0.jsonl  eval_mini_v0.summary.txt  eval_mini_v1.jsonl  eval_mini_v1.summary.txt
scripts/: chat_cli.py  download_docs.py  eval_ci_strict.sh  eval_dev.sh  eval_dev_strict.sh  eval_mini.sh  eval_mini_strict.sh  ingest.py  ingest_ci.py  ingest_docs.py  run_annotation.py  run_eval.py
src/: config.py  schemas.py  startup_checks.py
src/eval/: checks.py  io_jsonl.py  normalize.py  reporting.py  result_types.py  runner.py  schemas.py
src/ingest/: annotate.py  ingest.py  templates.py
src/ingest/entities/: registry.py  schemas.py  tagger.py
src/ingest/loaders/: html_loader.py  md_loader.py  pdf_loader.py
src/rag/: ambiguity.py  catalog.py  chain.py  coverage.py  embeddings.py  entity_extract.py  formatting.py  gating.py  ingest.py  llms.py  ood.py  output_cleaner.py  policy.py  prompts.py  retriever.py  tiebreakers.py
src/utils/: artifacts.py  console.py  diagnostics.py  files.py  text.py
tests/: test_entity_aware_ambiguity.py  test_eval_contract.py  test_gap_gate.py  test_output_cleaner.py
(+4 files in other folders)
