[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-knowledge-rag-langchain"
version = "0.3.0"
description = "RAG-based engineering knowledge assistant using LangChain"
requires-python = ">=3.10"

# Runtime dependencies
dependencies = [
    # Core LangChain stack
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",

    # Provider packages
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",

    # Vector store
    "faiss-cpu>=1.7.4",

    # PDF Processing
    "pypdf>=4.2.0",

    # HuggingFace embeddings
    "sentence-transformers>=2.7.0",
    "torch>=2.1.0",

    # Utilities
    "tqdm>=4.67.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
exclude = ["tests", "tests.*"]
